[package]
name = "windy-log4"
version = "0.1.4"
authors = ["windy <kugoo11v12@126.com>"]
edition = "2018"
description = "A simple log4 module for rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
once_cell = "1.5.2"